add settings to run vite

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,7 @@ services:
       - type: bind
         source: .
         target: /app
+    tty: true
+    ports:
+      - '8080:8080'
+    command: npm start
